<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpPage"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameTextFieldBox"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nicknameTextField"
            style="@style/primaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nickname" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eMailTextFieldBox"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameTextFieldBox">

        <EditText
            android:id="@+id/eMailTextField"
            style="@style/primaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eMail" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextFieldBox"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eMailTextFieldBox">

        <EditText
            android:id="@+id/passwordTextField"
            style="@style/primaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAccountSignUp"
        style="@style/primaryTextStyleOnBackground"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/eMailTextFieldBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextFieldBox" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="14dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/profilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="149dp" />


    <TextView
        android:id="@+id/girisYap"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextFieldBox"
        app:layout_constraintStart_toStartOf="@+id/passwordTextFieldBox"
        app:layout_constraintTop_toBottomOf="@+id/createAccountSignUp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePicture"
        app:shapeAppearanceOverlay="@style/CircularImageViewStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:background="#11000000"
        android:src="@drawable/outline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@+id/nicknameTextFieldBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>